  * mongoc_collection_insert, mongoc_collection_update, mongoc_collection_remove
    consistently use domain MONGOC_ERROR_BSON, code MONGOC_ERROR_BSON_INVALID
    if passed oversized BSON, and MONGOC_ERROR_COLLECTION for other errors.
    mongoc_bulk_operation_execute continues to use MONGOC_ERROR_COMMAND for
    all errors.

Removed configure flags:
  * --enable-experimental has been removed. All previously experimental
    features are now always on.
  * The configure option "--enable-hardening" had had no effect. It is removed
    in favor of system-wide compiler configuration.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Fiona Rowan
  * Ian Boros
  * Remi Collet
  * Brian McCarthy
  * Jeroen Ooms
  * J. Rassi
  * Christoph Schwarz
  * Alexey Vorobeyev

Peace,

    A. Jesse Jiryu Davis


mongo-c-driver 1.4.2
====================

It is my pleasure to announce mongo-c-driver 1.4.2. This release fixes bugs in
"minPoolSize" logic, see CDRIVER-1558 for details.

Peace,

    A. Jesse Jiryu Davis


mongo-c-driver 1.4.1
====================

It is my pleasure to announce mongo-c-driver 1.4.1. This is a bugfix release:

  * mongoc_client_get_server_descriptions could return a list including NULLs
  * Tailable cursors on MongoDB 3.2 only worked with MONGOC_QUERY_AWAIT_DATA
  * Spurious warnings with MONGOC_DISABLE_SHM

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson

Peace,

    A. Jesse Jiryu Davis


mongo-c-driver 1.4.0
====================

It is my pleasure to announce the release of mongo-c-driver 1.4.0.

TLS
---

The driver can now use the native TLS and crypto functions included in Mac OS X
and Windows. OpenSSL is no longer required for TLS or authentication on Mac or
Windows. By default, OpenSSL is used if available, the default will switch in
version 2.0 to prefer native TLS.

For native TLS on Mac:
